WORKING/fr-kubernetes-le-reseau/assets/busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox2
  namespace: default
  labels:
    app: busybox
spec:
  containers:
  - name: busy
    image: busybo
    command:
      - sleep
      - "3600"
